--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>probas git</title>
+    <title>probas git </title>
 </head>
 
 <body>
     <h1>Probas git</h1>
-    <p>Exercicio para hacer pruebas </p>
+    <p>Eprobaremos git push a partir de ahora </p>
 </body>
 
 </html>
