cambio titulo main

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Probas git</h1>
+    <h1>Probas git main</h1>
     <p>Eprobaremos git push a partir de ahora </p>
 </body>
 
