--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Probas git main</h1>
-    <p>Eprobaremos git push a partir de ahora </p>
+    <p>Eprobaremos git push a partir de ahora prueba de cambio adicional</p>
 </body>
 
 </html>
