--- a/index.html
+++ b/index.html
@@ -9,11 +9,42 @@
 </head>
 
 <body>
-    <h1>Probas git main</h1>
-    <p>Eprobaremos git push a partir de ahora prueba de cambio adicional</p>
-    <p>otra prueba mas a ver si lo ve camilo</p>
-    <p>probas git en cambio--paragrafo</p>
-    <p>probas git en cambio--paragrafo rama camilo</p>
+    <header>
+        <h1>probas git en cambio--paragrafo </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+       <form action="" method="POST" class="formulario">
+    <h1>Formulario de Contacto</h1>
+    
+    <div class="form-grupo">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required>
+    </div>
+
+    <div class="form-grupo">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+    </div>
+
+    <div class="form-grupo">
+        <label for="asunto">Asunto:</label>
+        <input type="text" id="asunto" name="asunto">
+    </div>
+
+    <div class="form-grupo">
+        <label for="mensaje">Mensaje:</label>
+        <textarea id="mensaje" name="mensaje" rows="4"></textarea>
+    </div>
+
+    <button type="submit">Enviar</button>
+</form>
+    </main>
 </body>
 
 </html>
