--- a/index.html
+++ b/index.html
@@ -14,4 +14,18 @@
     <p>otra prueba mas a ver si lo ve camilo</p>
 </body>
 
+
+<!--Este sera el css para darle color y demas cosas-->
+<style>
+    h1 {
+        color: blue;
+        text-align: center;
+    }
+
+    p {
+
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+</style>
+
 </html>
