--- a/index.html
+++ b/index.html
@@ -6,44 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>probas git en cambio--paragrafo </title>
     <link rel="stylesheet" href="estilo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 </head>
 
 <body>
     <header>
         <h1>probas git en cambio--paragrafo </h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
+        <ul class="nav">
+
+            <li class="nav-item">
+                <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="contacto.html">Contacto</a>
+            </li>
+
+        </ul>
     </header>
     <main>
-       <form action="" method="POST" class="formulario">
-    <h1>Formulario de Contacto</h1>
-    
-    <div class="form-grupo">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-    </div>
+        <form action="" method="POST" class="formulario">
+            <h1>Formulario de Contacto</h1>
 
-    <div class="form-grupo">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-    </div>
+            <div class="form-grupo">
+                <label for="nombre">Nombre:</label>
+                <input type="text" id="nombre" name="nombre" required>
+            </div>
 
-    <div class="form-grupo">
-        <label for="asunto">Asunto:</label>
-        <input type="text" id="asunto" name="asunto">
-    </div>
+            <div class="form-grupo">
+                <label for="email">Email:</label>
+                <input type="email" id="email" placeholder="Correo@gmail.com" name="email" required>
+            </div>
 
-    <div class="form-grupo">
-        <label for="mensaje">Mensaje:</label>
-        <textarea id="mensaje" name="mensaje" rows="4"></textarea>
-    </div>
+            <div class="form-grupo">
+                <label for="asunto">Asunto:</label>
+                <input type="text" id="asunto" name="asunto">
+            </div>
 
-    <button type="submit">Enviar</button>
-</form>
+
+            <label for="mensaje">Mensaje:</label>
+            <textarea id="mensaje" name="mensaje" rows="4"></textarea>
+
+
+            <button class="btn btn-primary" type="submit">Enviar</button>
+        </form>
     </main>
 </body>
 
@@ -51,14 +57,30 @@
 <!--Este sera el css para darle color y demas cosas-->
 <style>
     h1 {
-        color: blue;
+
         text-align: center;
     }
 
-    p {
+    form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 30px auto;
+        padding: 24px 32px;
+        max-width: 400px;
+        background: #f8f9fa;
+        border-radius: 12px;
+        border-color: 5px black;
+        gap: 16px;
+        /* Espacio entre los elementos del formulario */
+    }
 
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    label {
+        padding: 5px;
     }
 </style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 
 </html>
