--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        <script src="index.js"></script>
 </head>
 
 <body>
@@ -24,36 +26,50 @@
 
         </ul>
     </header>
-    <main>
-        <form action="" method="POST" class="formulario">
-            <h1>Formulario de Contacto</h1>
+    <main class="container mt-5">
+    <form action="" method="POST" class="needs-validation" novalidate>
+        <h1 class="mb-4">Formulario de Contacto</h1>
 
-            <div class="form-grupo">
-                <label for="nombre">Nombre:</label>
-                <input type="text" id="nombre" name="nombre" required>
+        <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre:</label>
+            <input type="text" class="form-control" id="nombre" name="nombre" required>
+            <div class="invalid-feedback">
+                Por favor ingrese su nombre
             </div>
+        </div>
 
-            <div class="form-grupo">
-                <label for="email">Email:</label>
-                <input type="email" id="email" placeholder="Correo@gmail.com" name="email" required>
+        <div class="mb-3">
+            <label for="email" class="form-label">Email:</label>
+            <input type="email" class="form-control" id="email" name="email" 
+                   placeholder="correo@ejemplo.com" required>
+            <div class="invalid-feedback">
+                Por favor ingrese un email válido
             </div>
+        </div>
 
-            <div class="form-grupo">
-                <label for="asunto">Asunto:</label>
-                <input type="text" id="asunto" name="asunto">
+        <div class="mb-3">
+            <label for="asunto" class="form-label">Asunto:</label>
+            <input type="text" class="form-control" id="asunto" name="asunto" required>
+            <div class="invalid-feedback">
+                Por favor ingrese el asunto
             </div>
+        </div>
 
+        <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje:</label>
+            <textarea class="form-control" id="mensaje" name="mensaje" 
+                      rows="4" required></textarea>
+            <div class="invalid-feedback">
+                Por favor ingrese su mensaje
+            </div>
+        </div>
 
-            <label for="mensaje">Mensaje:</label>
-            <textarea id="mensaje" name="mensaje" rows="4"></textarea>
-
-
+        <div class="d-grid gap-2">
             <button class="btn btn-primary" type="submit">Enviar</button>
-        </form>
-    </main>
+        </div>
+    </form>
+</main>
 </body>
-
-
 <!--Este sera el css para darle color y demas cosas-->
 <style>
     h1 {
