--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </ul>
     </header>
     <main class="container mt-5">
-    <form action="" method="POST" class="needs-validation" novalidate>
+    <form class="needs-validation" novalidate>
         <h1 class="mb-4">Formulario de Contacto</h1>
 
         <div class="mb-3">
