--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
+    <link rel="icon" type="image/png" href="assets/pepook.jpg" sizes="32x32" />
 </head>
 
 <body>
     <header>
-        <h1>probas git en cambio--paragrafo !</h1>
+        <h1>probas git en cambio--paragrafo</h1>
         <ul class="nav">
 
             <li class="nav-item">
