--- a/index.html
+++ b/index.html
@@ -1,141 +1,35 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>probas git en cambio--paragrafo</title>
-    <link rel="stylesheet" href="estilo.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
     <link rel="icon" type="image/png" href="assets/pepook.jpg" sizes="32x32" />
-
-    <!--Este sera el css para darle color y demas cosas-->
-    <style>
-        h1 {
-            text-align: center;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin: 30px auto;
-            padding: 24px 32px;
-            max-width: 400px;
-            background: #f8f9fa;
-            border-radius: 12px;
-            border-color: 5px black;
-            gap: 16px;
-           
-        }
-
-        label {
-            padding: 5px;
-        }
-    </style>
 </head>
+<style>
+    h1 {
+        text-align: center;
+    }
+</style>
+<header>
+    <h1>Inicio</h1>
+    <ul class="nav">
+        <li class="nav-item">
+            <a class="nav-link" href="index.html">Inicio</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="contacto.html">Contacto</a>
+        </li>
+    </ul>
+</header>
 
 <body>
 
-    
-    <header>
-        <h1>probas git en cambio--paragrafo</h1>
-        <ul class="nav">
-            <li class="nav-item">
-                <a class="nav-link" href="index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="contacto.html">Contacto</a>
-            </li>
-        </ul>
-    </header>
-
-
-    <main class="container mt-5">
-        <form action="datosrecibidos.php" method="POST" class="needs-validation" novalidate>
-            <h1 class="mb-4">Formulario de Contacto</h1>
-
-            <div class="mb-3">
-                <label for="nombre" class="form-label">Nombre:</label>
-                <input type="text" class="form-control" id="nombre" name="nombre" required />
-                <div class="invalid-feedback">Por favor ingrese su nombre</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="email" class="form-label">Email:</label>
-                <input type="email" class="form-control" id="email" name="email" placeholder="correo@ejemplo.com"
-                    required />
-                <div class="invalid-feedback">Por favor ingrese un email válido</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="asunto" class="form-label">Asunto:</label>
-                <input type="text" class="form-control" id="asunto" name="asunto" required />
-                <div class="invalid-feedback">Por favor ingrese el asunto</div>
-            </div>
-
-            <div class="mb-3">
-                <label for="mensaje" class="form-label">Mensaje:</label>
-                <textarea class="form-control" id="mensaje" name="mensaje" rows="4" required></textarea>
-                <div class="invalid-feedback">Por favor ingrese su mensaje</div>
-            </div>
-
-            <div class="d-grid gap-2">
-                <button class="btn btn-primary" type="submit">Enviar</button>
-            </div>
-        </form>
-    </main>
 </body>
-<script>
-    // JavaScript para la validación del formulario
-    (function () {
-        "use strict";
-        var forms = document.querySelectorAll(".needs-validation");
-        Array.prototype.slice.call(forms).forEach(function (form) {
-            form.addEventListener(
-                "submit",
-                async function (event) {
-                    // Agregamos async
-                    if (!form.checkValidity()) {
-                        event.preventDefault();
-                        event.stopPropagation();
-                    }
-                    form.classList.add("was-validated");
-
-                    if (form.checkValidity()) {
-                        event.preventDefault(); // Prevenimos el envío inmediato
-                        await Swal.fire({
-                            icon: "success",
-                            title: "Formulario enviado",
-                            text: "Gracias por su mensaje.",
-                            confirmButtonText: "Aceptar",
-                            timer: 1700, // 3 segundos de espera
-                            timerProgressBar: true, // Muestra una barra de progreso
-                        });
-
-                        // Enviamos el formulario después del mensaje
-                        setTimeout(() => {
-                            form.submit();
-                        }, 500);
-                    } else {
-                        Swal.fire({
-                            icon: "error",
-                            title: "Error",
-                            text: "Por favor complete todos los campos requeridos.",
-                            confirmButtonText: "Aceptar",
-                        });
-                    }
-                },
-                false
-            );
-        });
-    })();
-</script>
-
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
 
