--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a class="nav-link" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="contacto.html">Contacto</a>
+            <a class="nav-link" href="viem/contacto.html">Contacto</a>
         </li>
     </ul>
 </header>
