--- a/viem/contacto.html
+++ b/viem/contacto.html
@@ -45,7 +45,7 @@
     <header>
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="index.html">Inicio</a>
+                <a class="nav-link" href="../index.html">Inicio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
