--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
             <a class="nav-link" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="viem/contacto.html">Contacto</a>
+            <a class="nav-link" href="view/contacto.html">Contacto</a>
         </li>
     </ul>
 </header>
 
 <body>
-
+    
 </body>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous" />
