--- a/index.html
+++ b/index.html
@@ -32,46 +32,40 @@
     <div class="container mt-5">
         <div class="row">
             <!-- Tarjeta 1 -->
-            <div class="col-md-3">
-                <div class="card h-100">
+            <div class="col-md-6 mb-4">
+                <div class="card h-100" style="min-height: 350px;">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/s1i3YfGl5ag" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
                     </div>
-                    <div class="card-body">
-                    </div>
                 </div>
             </div>
             <!-- Tarjeta 2 -->
-            <div class="col-md-3">
-                <div class="card h-100">
+            <div class="col-md-6 mb-4">
+                <div class="card h-100" style="min-height: 350px;">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/VQRLujxTm3c" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
                     </div>
-                    <div class="card-body">
-                    </div>
                 </div>
             </div>
+        </div>
+        <div class="row">
             <!-- Tarjeta 3 -->
-            <div class="col-md-3">
-                <div class="card h-100">
+            <div class="col-md-6 mb-4">
+                <div class="card h-100" style="min-height: 350px;">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/PluFYVyArqs" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
                     </div>
-                    <div class="card-body">
-                    </div>
                 </div>
             </div>
             <!-- Tarjeta 4 -->
-            <div class="col-md-3">
-                <div class="card h-100">
+            <div class="col-md-6 mb-4">
+                <div class="card h-100" style="min-height: 350px;">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
-                    </div>
-                    <div class="card-body">
                     </div>
                 </div>
             </div>
