quitando espacio debajo de los videos

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <!-- Tarjeta 1 -->
             <div class="col-md-6 mb-4">
-                <div class="card h-100" style="min-height: 350px;">
+                <div class="card">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/s1i3YfGl5ag" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
@@ -42,7 +42,7 @@
             </div>
             <!-- Tarjeta 2 -->
             <div class="col-md-6 mb-4">
-                <div class="card h-100" style="min-height: 350px;">
+                <div class="card">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/VQRLujxTm3c" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
@@ -53,7 +53,7 @@
         <div class="row">
             <!-- Tarjeta 3 -->
             <div class="col-md-6 mb-4">
-                <div class="card h-100" style="min-height: 350px;">
+                <div class="card">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/PluFYVyArqs" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
@@ -62,7 +62,7 @@
             </div>
             <!-- Tarjeta 4 -->
             <div class="col-md-6 mb-4">
-                <div class="card h-100" style="min-height: 350px;">
+                <div class="card">
                     <div class="ratio ratio-16x9">
                         <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen
                             style="width:100%;height:100%;border:0;"></iframe>
