--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
         <li class="nav-item">
             <a class="nav-link" href="view/contacto.html">Contacto</a>
         </li>
+          <li class="nav-item">
+            <a class="nav-link" href="view/ApiMemes.html">Contacto</a>
+        </li>
     </ul>
 </header>
 
