--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="view/contacto.html">Contacto</a>
         </li>
           <li class="nav-item">
-            <a class="nav-link" href="view/ApiMemes.html">Contacto</a>
+            <a class="nav-link" href="view/ApiMemes.html">Memes</a>
         </li>
     </ul>
 </header>
